Resolve #204 by suppressing Nashorn deprecation warning ... ensure precommit tests are run with JDK 8 and default Rhino ... add script to make it easy to run with JDK 11 during development ... emit detailed deprecation warnings when compiling loader ... remove many warnings under JDK 11